fixtures/vyper/simple/overflow/negative/i64.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-9223372036854775808"
#!           ],
#!           "caller": "0xad110baA27eDb7Ec8736a3A588fABCda4d21fF28"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int64) -> int64:
    return witness - 1
